src/objects/Snapshot_Keyword_Unrank__c.object
<CustomObject>
    <description>Snapshot Keyword Unrank</description>
    <fields>
        <fullName>Google_Unranked_Count_DaysAgo2__c</fullName>
        <description>Google Unranked Count DaysAgo2</description>
        <inlineHelpText>Google Unranked Count DaysAgo2</inlineHelpText>
        <label>Google Unranked Count DaysAgo2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Unranked_Count__c</fullName>
        <description>Google Unranked Count</description>
        <inlineHelpText>Google Unranked Count</inlineHelpText>
        <label>Google Unranked Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Unranked_Increase_2_days__c</fullName>
        <description>Google Unranked Increase 2 days</description>
        <inlineHelpText>Google Unranked Increase 2 days</inlineHelpText>
        <label>Google Unranked Increase 2 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Keyword_Count__c</fullName>
        <description>Keywords</description>
        <inlineHelpText>Keywords</inlineHelpText>
        <label>Keywords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Email__c</fullName>
        <description>Project Owner Email</description>
        <inlineHelpText>Project Owner Email</inlineHelpText>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Name__c</fullName>
        <description>Owner</description>
        <inlineHelpText>Owner</inlineHelpText>
        <label>Project Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Website__c</fullName>
        <description>Snapshot Keyword Unrank</description>
        <inlineHelpText>Snapshot Keyword Unrank</inlineHelpText>
        <label>SEO Website</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>website_url__c</description>
        <inlineHelpText>website_url__c</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Snapshot Keyword Unrank</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Google_Unranked_Count__c</columns>
        <columns>Google_Unranked_Count_DaysAgo2__c</columns>
        <columns>Google_Unranked_Increase_2_days__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Project_Owner_Name__c</columns>
        <columns>SEO_Website__c</columns>
        <columns>URL__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Google_Unranked_Count__c</columns>
        <columns>Google_Unranked_Count_DaysAgo2__c</columns>
        <columns>Google_Unranked_Increase_2_days__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Project_Owner_Email__c</columns>
        <columns>Project_Owner_Name__c</columns>
        <columns>SEO_Website__c</columns>
        <columns>URL__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Google_Unranked_Count__c</columns>
        <columns>Google_Unranked_Count_DaysAgo2__c</columns>
        <columns>Google_Unranked_Increase_2_days__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Project_Owner_Email__c</columns>
        <columns>Project_Owner_Name__c</columns>
        <columns>SEO_Website__c</columns>
        <columns>URL__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>SEO-{00000}</displayFormat>
        <label>Snapshot Keyword Unrank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Keyword Unranks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>